--- a/analysis/real_data_all_tissues.Rmd
+++ b/analysis/real_data_all_tissues.Rmd
@@ -62,10 +62,18 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### LDL results (low-density lipoprotein)
+### WBC results (White blood cell count)
+```{r, echo=FALSE, fig.width=10, fig.height=8, eval=FALSE}
+param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.ctwas_parameters.RDS"
+ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.finemap_regions_res.RDS"
+output <- get_results(param_file,ctwas_file)
+DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
+```
+
+### RA results (Rheumatoid arthritis)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
-param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ldl_all_tissue_E/ldl_all_tissue_E.ctwas_parameters.RDS"
-ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ldl_all_tissue_E/ldl_all_tissue_E.finemap_regions_res.RDS"
+param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ra_all_tissue_E/ra_all_tissue_E.ctwas_parameters.RDS"
+ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ra_all_tissue_E/ra_all_tissue_E.finemap_regions_res.RDS"
 output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
@@ -94,16 +102,7 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### WBC results
-```{r, echo=FALSE, fig.width=10, fig.height=8, eval=FALSE}
-param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.ctwas_parameters.RDS"
-ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.finemap_regions_res.RDS"
-output <- get_results(param_file,ctwas_file)
-DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
-```
-
-
-### SCZ results
+### SCZ results (Schizophrenia)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/scz_all_tissue_E/scz_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/scz_all_tissue_E/scz_all_tissue_E.finemap_regions_res.RDS"
@@ -111,7 +110,7 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### BIP results
+### BIP results (Bipolar disorder)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/bip_all_tissue_E/bip_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/bip_all_tissue_E/bip_all_tissue_E.finemap_regions_res.RDS"
@@ -119,7 +118,7 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### MDD results
+### MDD results (Major depressive disorder)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/mdd_all_tissue_E/mdd_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/mdd_all_tissue_E/mdd_all_tissue_E.finemap_regions_res.RDS"
@@ -127,15 +126,23 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### RA results
+### LDL results (low-density lipoprotein)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
-param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ra_all_tissue_E/ra_all_tissue_E.ctwas_parameters.RDS"
-ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ra_all_tissue_E/ra_all_tissue_E.finemap_regions_res.RDS"
+param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ldl_all_tissue_E/ldl_all_tissue_E.ctwas_parameters.RDS"
+ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/ldl_all_tissue_E/ldl_all_tissue_E.finemap_regions_res.RDS"
 output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### BMI results
+### TG results (Triglycerides)
+```{r, echo=FALSE, fig.width=10, fig.height=8}
+param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/tg_all_tissue_E/tg_all_tissue_E.ctwas_parameters.RDS"
+ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/tg_all_tissue_E/tg_all_tissue_E.finemap_regions_res.RDS"
+output <- get_results(param_file,ctwas_file)
+DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
+```
+
+### BMI results (Body mass index)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/bmi_all_tissue_E/bmi_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/bmi_all_tissue_E/bmi_all_tissue_E.finemap_regions_res.RDS"
@@ -143,18 +150,10 @@ output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-### T2D results
+### T2D results (Type 2 diabetes)
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/t2d_all_tissue_E/t2d_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/t2d_all_tissue_E/t2d_all_tissue_E.finemap_regions_res.RDS"
-output <- get_results(param_file,ctwas_file)
-DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
-```
-
-### TG results
-```{r, echo=FALSE, fig.width=10, fig.height=8}
-param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/tg_all_tissue_E/tg_all_tissue_E.ctwas_parameters.RDS"
-ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/tg_all_tissue_E/tg_all_tissue_E.finemap_regions_res.RDS"
 output <- get_results(param_file,ctwas_file)
 DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
