--- a/analysis/real_data_all_tissues.Rmd
+++ b/analysis/real_data_all_tissues.Rmd
@@ -63,7 +63,7 @@ DT::datatable(output,caption = htmltools::tags$caption( style = 'caption-side: t
 ```
 
 ### WBC results (White blood cell count)
-```{r, echo=FALSE, fig.width=10, fig.height=8, eval=FALSE}
+```{r, echo=FALSE, fig.width=10, fig.height=8}
 param_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.ctwas_parameters.RDS"
 ctwas_file <- "/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.finemap_regions_res.RDS"
 output <- get_results(param_file,ctwas_file)
